# interlope-py

./: .gitignore  README.md  engineconf.toml  gamedata.sqlite  imgui.ini  pyproject.toml  run.bat  run.sh
.code/: config.json
docs/: index.txt  links.txt  load_dds.c
scenes/: chairs.toml  room.toml
shaders/: editor.frag  editor.vert  meta_geometry.frag  object.frag  object.vert
shaders/test/: test_color.vs  test_color_attr.fs  test_color_yellow.fs  test_shape.vs  test_uniform.fs  test_uniform.vs
src/: __init__.py  __main__.py  app.py  assets.py  camera.py  clock.py  color.py  config.py  db.py  engine.py  gfx.py  gfx_uniform.py  gui.py  input_.py  iofs.py  loader.py  logging_ex.py  material.py  mesh.py  scene.py  texture.py  window.py  world.py
